# team-up-test

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
iq_eq_tests/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  validations.py  views.py
iq_eq_tests/migrations/: 0001_initial.py
